test/failing/badintfield1.trunnel

struct x {
   u8 b[a];
}
